# muxis

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: cluster_benchmark.rs
docs/: architecture.md  cluster.md  commands.md  getting-started.md  multiplexing.md
examples/: auth.rs  basic.rs  builder.rs  cluster.rs  cluster_pipeline.rs  pipeline.rs
muxis-client/: Cargo.toml
muxis-client/src/: lib.rs
muxis-cluster/: Cargo.toml
muxis-cluster/src/: lib.rs
muxis-core/: Cargo.toml
muxis-core/src/: builder.rs  command.rs  connection.rs  lib.rs  multiplexed.rs  tls.rs
muxis-core/tests/: stress_multiplexing.rs
muxis-proto/: Cargo.toml
muxis-proto/src/: error.rs  lib.rs
muxis-proto/src/codec/: decoder.rs  encoder.rs  mod.rs
muxis-proto/src/frame/: mod.rs  types.rs
muxis-test/: Cargo.toml
muxis-test/src/: lib.rs
src/: lib.rs
src/cluster/: client.rs  commands.rs  errors.rs  mod.rs  pool.rs  slot.rs  topology.rs
src/core/: builder.rs  command.rs  connection.rs  mod.rs  multiplexed.rs  tls.rs
src/proto/: error.rs
src/proto/codec/: decoder.rs  encoder.rs  mod.rs
src/proto/frame/: types.rs
src/stress/: mod.rs
src/testing/: mod.rs
tests/: cluster_integration.rs  cluster_stress.rs  hash_commands.rs  key_commands.rs  list_commands.rs  set_commands.rs  sorted_set_commands.rs  stress_multiplexing.rs  string_commands.rs
