[package]
name = "muxis"
version = "0.5.0"
edition = "2021"
authors = ["Muxis Contributors"]
description = "High-performance Redis client for Rust with multiplexing"
repository = "https://github.com/nghiaphamln/muxis"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["redis", "database", "async", "multiplexing"]
categories = ["database", "asynchronous"]

[dependencies]
bytes = { version = "1.11.1", features = ["std"] }
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["net", "sync", "time", "rt", "io-util", "macros"] }
tracing = "0.1"
url = "2.5.8"
cfg-if = "1.0.4"
futures = "0.3.31"

# Optional dependencies
crc = { version = "3.4.0", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring"] }
webpki-roots = { version = "0.26", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[features]
default = []
cluster = ["crc"]
tls = ["rustls", "tokio-rustls", "webpki-roots"]
resp3 = []
json = ["serde", "serde_json"]
streams = []
test-utils = []

[[bench]]
name = "cluster_benchmark"
harness = false
required-features = ["cluster"]
