[package]
name = "muxis-cluster"
version = "0.2.0"
edition = "2021"
authors = ["Muxis Contributors"]
description = "Cluster support for Muxis Redis client"
repository = "https://github.com/nexorion/muxis"
license = "MIT OR Apache-2.0"

[dependencies]
muxis-core = { path = "../muxis-core", version = "0.2.0" }
muxis-proto = { path = "../muxis-proto", version = "0.2.0" }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1.44"
thiserror = "2.0"
