[package]
name = "muxis-proto"
version = "0.1.0"
edition = "2021"
authors = ["Muxis Contributors"]
description = "RESP protocol codec for Muxis Redis client"
repository = "https://github.com/nexorion/muxis"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { version = "1", features = ["std"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.40", features = ["io-util", "time"] }
