[package]
name = "muxis-test"
version = "0.2.0"
edition = "2021"
authors = ["Muxis Contributors"]
description = "Test utilities for Muxis Redis client"
repository = "https://github.com/nexorion/muxis"
license = "MIT OR Apache-2.0"

[dependencies]
muxis-proto = { path = "../muxis-proto", version = "0.2.0" }
muxis-core = { path = "../muxis-core", version = "0.2.0" }
muxis-cluster = { path = "../muxis-cluster", version = "0.2.0" }
muxis-client = { path = "../muxis-client", version = "0.2.0" }
tokio = { version = "1.49", features = ["test-util"] }
